[package]
name = "typetag"
version = "0.1.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Serde serializable and deserializable trait objects"
repository = "https://github.com/dtolnay/typetag"
documentation = "https://docs.rs/typetag"
keywords = ["serde"]
categories = ["encoding"]
readme = "README.md"
edition = "2018"
exclude = ["/sgx/*"]

#[workspace]
#members = ["impl"]

[dependencies]
erased-serde = { git = "https://github.com/veracruz-project/erased-serde.git", branch="veracruz" }
inventory = { git = "https://github.com/veracruz-project/inventory.git", branch="veracruz" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
serde = { features = ["derive"], git = "https://github.com/veracruz-project/serde.git", branch="veracruz" }
typetag-impl = { version = "=0.1.4", path = "impl" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#bincode = "1.0"
#serde_json = "1.0"

[features]
default = []
mesalock_sgx = ["sgx_tstd", "erased-serde/mesalock_sgx", "inventory/mesalock_sgx",  "serde/mesalock_sgx"]
